实现了第二个第三个主界面的简单布局，整体色调为蓝色时

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".StudentScheduleActivity"/>
-        <activity android:name=".StudentInquireActivity">
+        <activity android:name=".StudentActivity.StudentScheduleActivity"/>
+        <activity android:name=".StudentActivity.StudentInquireActivity">
         </activity>
-        <activity android:name=".StudentMineActivity">
+        <activity android:name=".StudentActivity.StudentMineActivity">
+        </activity>
+        <activity android:name=".student.activity.StudentCheckingActivity">
+        </activity>
+        <activity android:name=".student.activity.StudentIndexActivity">
         </activity>
     </application>
 
