学生整体界面基本做完了，教师界面的几个视图创建好但还无内容

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".StudentActivity.StudentScheduleActivity"/>
-        <activity android:name=".StudentActivity.StudentInquireActivity">
-        </activity>
-        <activity android:name=".StudentActivity.StudentMineActivity">
-        </activity>
-        <activity android:name=".student.activity.StudentCheckingActivity">
-        </activity>
-        <activity android:name=".student.activity.StudentIndexActivity">
-        </activity>
+        <activity android:name=".student.activity.StudentCheckingActivity"/>
+        <activity android:name=".student.activity.StudentIndexActivity"/>
+        <activity android:name=".teacher.activity.TeacherCheckingActivity"/>
+        <activity android:name=".teacher.activity.TeacherIndexActivity"/>
     </application>
 
 </manifest>
