--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     compile files('libs/ormlite-android-5.0.jar')
     compile files('libs/ormlite-core-5.0.jar')
     compile files('libs/ormlite-jdbc-5.0.jar')
+    compile files('libs/commons-codec-1.10.jar')
+    compile files('libs/cos-sdk-android-1.4.2.jar')
+    compile files('libs/cos_api-4.4.jar')
+    compile files('libs/okhttp-3.2.0.jar')
+    compile files('libs/okio-1.6.0.jar')
 }
