--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    packagingOptions { exclude 'META-INF/LICENSE'; exclude 'META-INF/NOTICE'; }
 }
 
 dependencies {
@@ -41,4 +42,8 @@ dependencies {
     compile files('libs/cos_api-4.4.jar')
     compile files('libs/okhttp-3.2.0.jar')
     compile files('libs/okio-1.6.0.jar')
+    compile files('libs/sun.misc.BASE64Decoder.jar')
+    compile files('libs/jackson-annotations-2.2.1.jar')
+    compile files('libs/jackson-core-2.2.1.jar')
+    compile files('libs/jackson-databind-2.2.1.jar')
 }
