登录已经处理了，修改密码，用户注册的界面已经写好，还没有和服务器接口对接

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity
-            android:name=".RegistActivity"
+            android:name=".RegistFaceActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity android:name=".IndexActivity">
@@ -44,6 +44,8 @@
         <activity android:name=".student.activity.StudentChangeInfoActivity">
         </activity>
         <activity android:name=".ChangePasswordActivity">
+        </activity>
+        <activity android:name=".RegistActivity">
         </activity>
     </application>
 
