完成修改信息的功能，但是头像暂时还没有实时的更新，仅仅是将图片和url上传。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         </activity>
         <activity android:name=".RegistActivity">
         </activity>
+        <activity android:name=".teacher.activity.TeacherChangeInfoActivity">
+        </activity>
     </application>
 
 </manifest>
