教师可以开启考勤，学生也可以扫描蓝牙获取考勤权限并且进行考勤，也可以帮助他人进行考勤，欠缺功能有教师实时的查询考勤信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.checkingsystem">
 
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -48,6 +50,8 @@
         <activity android:name=".RegistActivity">
         </activity>
         <activity android:name=".teacher.activity.TeacherChangeInfoActivity">
+        </activity>
+        <activity android:name=".teacher.activity.TeacherCheckingStudentAttendanceList">
         </activity>
     </application>
 
