--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile files('libs/jackson-annotations-2.2.1.jar')
     compile files('libs/jackson-core-2.2.1.jar')
     compile files('libs/jackson-databind-2.2.1.jar')
+    compile project(':library')
 }
