添加了教师开课和学生加入课程的功能，但是教师开课功能中文出现问题，暂时还未解决

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,9 @@
         </activity>
         <activity android:name=".teacher.activity.TeacherChangeInfoActivity">
         </activity>
-        <activity android:name=".teacher.activity.TeacherCheckingStudentAttendanceList">
+        <activity android:name=".teacher.activity.TeacherCheckingStudentAttendanceListActivity">
+        </activity>
+        <activity android:name=".teacher.activity.TeacherAddCourseActivity">
         </activity>
     </application>
 
