基本功能已经实现，登录页更换，导员还剩下查询缺勤这块。然后修改密码，忘记密码正在测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,10 +71,10 @@
         </activity>
         <activity android:name=".assistant.activity.AssistantAgreeForClassActivity">
         </activity>
-
-
-
-
+        <activity android:name=".student.activity.StudentQueryLeaveInfoListActivity">
+        </activity>
+        <activity android:name=".ForgetPasswordActivity">
+        </activity>
     </application>
 
 </manifest>
